Check setup-rails detects Sorbet

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,4 +3,4 @@ on: [push]
 
 jobs:
   verify:
-    uses: setup-rails/setup-rails/.github/workflows/verify.yml@v1
+    uses: setup-rails/setup-rails/.github/workflows/verify.yml@main
